grammar.js
    source_file: $ => repeat($._top_level_statement),

    // Top-level statement: blocks or regular statements (each decides where it ends)
    _top_level_statement: $ =>
      choice(
        // Block directives: highest precedence (don't consume newlines internally)
        prec(1, $.macro_definition),
        prec(1, $.if_block),
        prec(1, $.rept_block),
        prec(1, $.for_block),
        prec(1, $.load_block),
        prec(1, $.union_block),

        // Standalone block comments
        seq($.block_comment, /\r?\n/),

        // 1. Labels (global/local/anonymous)
        seq($.label_definition, optional($.inline_comment), /\r?\n/),

        // 2. Directives (SECTION, DEF, LOAD, ENDL, etc.)
        prec(2, seq($.directive, optional($.inline_comment), /\r?\n/)),

        // 3. Instructions – *only* real opcodes
        prec(1, seq($.instruction_line, optional($.inline_comment), /\r?\n/)),

        // 4. Macro invocations – non-opcode symbols
        prec(2, seq($.macro_invocation_line, optional($.inline_comment), /\r?\n/)),

        // 5. Blank or comment-only lines
        seq(optional($.inline_comment), /\r?\n/)
      ),

    // ----- Comments -----

    comment: $ => token(seq(';', /.*/)),

    inline_comment: $ => prec(1, $.comment),

    // C-style block comments (RGBDS behavior: no nesting)
    directive: $ =>
      choice(
        $.section_directive,
        $.macro_definition,
        $.if_block,
        $.redef_directive,
        $.def_directive,
        $.assert_directive,
        $.purge_directive,
        $.align_directive,
        $.ds_directive,
        $.shift_directive,
        $.break_directive,
        $.load_block,
        $.include_directive,
        $.incbin_directive,
        $.union_block,
        $.fragment_literal,
        $.charmap_directive,
        $.newcharmap_directive,
        $.setcharmap_directive,
        $.export_directive,
        $.opt_directive,
        $.simple_directive
      ),

    def_directive: $ =>
      seq(
        field('keyword', alias(/[Dd][Ee][Ff]/, $.directive_keyword)),
        field('name', choice(
          $.identifier,
          $.raw_identifier,
          $.interpolatable_identifier
        )),
        choice(
          // String constant: DEF name EQUS "value" or #"value"
          seq(
            field('assign_type', alias(/[Ee][Qq][Uu][Ss]/, $.directive_keyword)),
            field('value', choice($.string_literal, $.raw_string_literal))
          ),
          // Numeric constant (immutable): DEF name EQU value
          seq(
            field('assign_type', alias(/[Ee][Qq][Uu]/, $.directive_keyword)),
            field('value', $.expression)
          ),
          // Variable (mutable): DEF name = value
          seq(
            field('assign_type', choice('=', '+=', '-=', '*=', '/=', '%=', '<<=', '>>=', '&=', '|=', '^=')),
            field('value', $.expression)
          ),
          // RS offset constants: DEF name RB/RW/RL count
          seq(
            field('assign_type', choice(/[Rr][Bb]/, /[Rr][Ww]/, /[Rr][Ll]/)),
            optional(field('value', $.expression))
          )
        )
      ),

    charmap_directive: $ =>
      seq(
        field('keyword', alias(/[Cc][Hh][Aa][Rr][Mm][Aa][Pp]/, $.directive_keyword)),
        field('key', choice(
          $.string_literal,
          $.char_literal,
          $.macro_argument
        )),
        optional(
          seq(
            ',',
            optional(seq(
              field('value', $.expression),
              repeat(seq(',', field('value', $.expression)))
            ))
          )
        )
      ),

    simple_directive: $ =>
      seq(
        field('keyword', $.directive_keyword),
        optional($.argument_list)
      ),

    directive_keyword: $ =>
      token(
        choice(
          /[Rr][Ee][Dd][Ee][Ff]/,
          /[Ee][Qq][Uu]/,
          /[Ee][Qq][Uu][Ss]/,
          /[Dd][Bb]/,
          /[Dd][Ww]/,
          /[Dd][Ss]/,
          /[Cc][Hh][Aa][Rr]/,
          /[Rr][Ee][Aa][Dd][Ff][Ii][Ll][Ee]/,
          /[Pp][Rr][Ii][Nn][Tt]/,
          /[Pp][Rr][Ii][Nn][Tt][Ll][Nn]/,
          /[Pp][Rr][Ii][Nn][Tt][Tt]/,
          /[Ff][Aa][Ii][Ll]/,
          /[Ww][Aa][Rr][Nn]/,
          /[Ii][Mm][Pp][Oo][Rr][Tt]/,
          /[Xx][Rr][Ee][Ff]/,
          /[Rr][Ss][Ss][Ee][Tt]/,
          /[Rr][Ss][Rr][Ee][Ss][Ee][Tt]/,
          /[Pp][Uu][Ss][Hh][Oo]/,
          /[Pp][Oo][Pp][Oo]/,
          /[Pp][Uu][Ss][Hh][Ss]/,
          /[Pp][Oo][Pp][Ss]/,
          /[Pp][Uu][Ss][Hh][Cc]/,
          /[Pp][Oo][Pp][Cc]/,
          /[Cc][Hh][Aa][Rr][Mm][Aa][Pp]/,
          /[Nn][Ee][Ww][Cc][Hh][Aa][Rr][Mm][Aa][Pp]/,
          /[Ss][Ee][Tt][Cc][Hh][Aa][Rr][Mm][Aa][Pp]/,
          /[Ll][Oo][Aa][Dd]/,
          /[Ee][Nn][Dd][Ll]/,
          /[Ff][Rr][Aa][Gg][Mm][Ee][Nn][Tt]/,
          /[Aa][Ll][Ii][Gg][Nn]/
        )
      ),

    argument_list: $ =>
      seq(
        $.expression,
        repeat(seq(',', $.expression))
      ),

    // ----- Block directives -----

    expression: $ =>
      choice(
        $.binary_expression,
        $.unary_expression,
        $.primary_expression
      ),

    primary_expression: $ =>
      choice(
        $.number_literal,
        $.string_literal,
        $.raw_string_literal,
        $.graphics_literal,
        $.char_literal,
        $.fragment_literal,
        $.macro_argument,
        $.macro_arguments_spread,
        $.macro_unique_suffix,
        $.function_call,
        alias('@', $.identifier),
        alias($._register_token, $.register),
        $.identifier,
        $.raw_identifier,
        $.local_identifier,
        seq('(', $.expression, ')')
      ),

    function_call: $ =>
      seq(
        field('function', $.identifier),
        '(',
        optional(
          seq(
            $.expression,
            repeat(seq(',', $.expression))
          )
        ),
        ')'
      ),

    binary_expression: $ =>
      choice(...binary_ops($)),

    unary_expression: $ =>
      prec.right(
        seq(
          choice('+', '-', '!', '~'),
          $.expression
        )
      ),

    number_literal: $ =>
      token(
        choice(
          // Precise fixed-point: 12.34q8 (q or Q, underscores allowed)
          /\d[\d_]*\.\d[\d_]*[qQ]\d[\d_]*/,
          // Fixed-point: 123.45 (underscores allowed)
          /\d[\d_]*\.\d[\d_]*/,
          // Hexadecimal: $12_AB or 0x12_AB
          /\$[0-9A-Fa-f][0-9A-Fa-f_]*/,
          /0[xX][0-9A-Fa-f][0-9A-Fa-f_]*/,
          // Octal: &123_456 or 0o123_456
          /&[0-7][0-7_]*/,
          /0[oO][0-7][0-7_]*/,
          // Binary: %1010_0101 or 0b1010_0101
          /%[01][01_]*/,
          /0[bB][01][01_]*/,
          // Decimal integer (underscores allowed)
          /\d[\d_]*/
        )
      ),

    // Single-character numeric constants like 'A' or '\n'
    string_literal: $ =>
      choice(
        $._triple_quote_string,
        $._regular_string
      ),

    _triple_quote_string: $ =>
      seq(
        '"""',
        repeat(choice(
          $.interpolation,
          $._string_content_triple
        )),
        '"""'
      ),

    _regular_string: $ =>
      seq(
        '"',
        repeat(choice(
          $.interpolation,
          $._string_content
        )),
        '"'
      ),

    interpolation: $ =>
      choice(
        // Nested interpolation: {{name}} - try first as it's most specific
        seq(
          '{',
          field('inner', $.interpolation),
          '}'
        ),
        // Format with symbol: {fmt:name} - must try before simple symbol
        prec(1, seq(
          '{',
          field('format', $.format_spec),
          field('symbol', choice($.identifier, $.raw_identifier)),
          '}'
        )),
        // Simple symbol: {name} - lowest priority
        seq(
          '{',
          field('symbol', choice($.identifier, $.raw_identifier)),
          '}'
        )
      ),

    identifier: $ =>
      token(choice(
        /[A-Za-z_][A-Za-z0-9_]*(?:\\@)?/,
        '.',  // Standalone dot is a valid identifier in RGBDS
        /-?[A-Za-z_][A-Za-z0-9_.=-]*/ // OPT-style identifiers (Wtruncation=256, -Weverything, Q.16)
      )),

    // Raw identifiers allow using reserved keywords as symbols
    // e.g. #load, #LOAD, #IF, etc.
